fix spacing

--- a/src/pages/Details/components/Entourage.css
+++ b/src/pages/Details/components/Entourage.css
@@ -9,6 +9,15 @@
   color: #fff;
 }
 
+.d-entourage-decor {
+  width: clamp(198px, 30vw, 520px);
+  height: auto;
+  fill: #fff;
+  margin: 0 0 100px;
+  align-self: flex-end;
+  display: block;
+}
+
 .d-entourage-grid {
   display: flex;
   flex-wrap: wrap;
@@ -40,7 +49,7 @@
 }
 
 .d-name {
-  font-size: 15px;
+  font-size: clamp(18px, 2.6vw, 24px);
   color: var(--primary);
   font-family: var(--sans);
   margin: 0;
